--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cotton Coatings</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-color: #fffaf0;
             color: #333;
             line-height: 1.6;
@@ -16,32 +17,43 @@
             background-color: #f1631f;
             color: #fff;
             text-align: center;
-            padding: 50px 20px;
+            padding: 60px 20px;
+            animation: fadeIn 1.5s ease-in-out;
         }
         header img {
-            max-width: 150px;
+            max-width: 200px;
+            animation: scaleUp 1s ease-in-out;
         }
         header h1 {
-            margin: 20px 0 10px;
-            font-size: 2.5em;
+            margin: 25px 0 10px;
+            font-size: 3em;
+            animation: slideIn 1s ease-in-out;
         }
         header p {
-            font-size: 1.2em;
+            font-size: 1.3em;
+            animation: slideIn 1.2s ease-in-out;
         }
         header a.button {
             display: inline-block;
             background-color: #fff;
             color: #f1631f;
-            padding: 10px 20px;
+            padding: 12px 24px;
             margin-top: 20px;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        header a.button:hover {
+            background-color: #f1631f;
+            color: #fff;
+            border: 1px solid #fff;
         }
         section {
-            padding: 50px 20px;
+            padding: 60px 20px;
             max-width: 1000px;
             margin: auto;
+            animation: fadeInUp 1s ease-in-out;
         }
         section h2 {
             color: #f1631f;
@@ -59,6 +71,10 @@
             padding: 15px;
             border-radius: 5px;
             font-size: 1.1em;
+            transition: transform 0.3s;
+        }
+        .services li:hover {
+            transform: translateY(-5px);
         }
         .contact form {
             display: flex;
@@ -79,17 +95,39 @@
             background-color: #f1631f;
             color: #fff;
             border: none;
-            padding: 10px;
+            padding: 12px;
             border-radius: 5px;
             font-size: 1.1em;
             cursor: pointer;
             margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+        .contact button:hover {
+            background-color: #d9531a;
         }
         footer {
             background-color: #f1631f;
             color: #fff;
             text-align: center;
             padding: 20px;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes scaleUp {
+            from { transform: scale(0.8); opacity: 0; }
+            to { transform: scale(1); opacity: 1; }
+        }
+        @keyframes slideIn {
+            from { transform: translateY(-20px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
