--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Cotton Coatings</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
@@ -13,25 +16,49 @@
             color: #333;
             line-height: 1.6;
         }
+        .sticky-nav {
+            position: sticky;
+            top: 0;
+            background-color: #f1631f;
+            z-index: 1000;
+            text-align: right;
+            padding: 10px 20px;
+        }
+        .sticky-nav a {
+            color: #fff;
+            background: #00000033;
+            padding: 8px 16px;
+            text-decoration: none;
+            border-radius: 4px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+        .sticky-nav a:hover {
+            background-color: #ffffff44;
+        }
         header {
             background-color: #f1631f;
             color: #fff;
             text-align: center;
             padding: 60px 20px;
-            animation: fadeIn 1.5s ease-in-out;
+            animation: fadeIn 2s ease-in-out forwards;
+            opacity: 0;
         }
         header img {
             max-width: 200px;
-            animation: scaleUp 1s ease-in-out;
+            animation: scaleUp 2s ease-in-out forwards;
+            opacity: 0;
         }
         header h1 {
             margin: 25px 0 10px;
             font-size: 3em;
-            animation: slideIn 1s ease-in-out;
+            animation: slideIn 1.8s ease-in-out forwards;
+            opacity: 0;
         }
         header p {
             font-size: 1.3em;
-            animation: slideIn 1.2s ease-in-out;
+            animation: slideIn 2s ease-in-out forwards;
+            opacity: 0;
         }
         header a.button {
             display: inline-block;
@@ -53,7 +80,9 @@
             padding: 60px 20px;
             max-width: 1000px;
             margin: auto;
-            animation: fadeInUp 1s ease-in-out;
+            opacity: 0;
+            animation: fadeInUp 1s ease-in-out forwards;
+            animation-delay: 1s;
         }
         section h2 {
             color: #f1631f;
@@ -114,11 +143,10 @@
 
         /* Animations */
         @keyframes fadeIn {
-            from { opacity: 0; }
             to { opacity: 1; }
         }
         @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(20px); }
+            from { opacity: 0; transform: translateY(40px); }
             to { opacity: 1; transform: translateY(0); }
         }
         @keyframes scaleUp {
@@ -126,12 +154,16 @@
             to { transform: scale(1); opacity: 1; }
         }
         @keyframes slideIn {
-            from { transform: translateY(-20px); opacity: 0; }
+            from { transform: translateY(-30px); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
 <body>
+
+    <div class="sticky-nav">
+        <a href="#contact">Contact Us</a>
+    </div>
 
     <header>
         <img src="cotton coatings.jpeg" alt="Cotton Coatings Logo">
